Added the code for the viewing the stored trips on the index page

--- a/TripsLog/Views/Shared/_Layout.cshtml
+++ b/TripsLog/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TripsLog</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     @section Scripts
     {
@@ -18,8 +18,11 @@
     @RenderSection("Scripts", required: false)
 </head>
 <body>
-    <header>
-    </header>
+    <div class="bg-dark container">
+        <header class="text-white text-center">
+            <h1>My Trip Log</h1>
+        </header>
+    </div>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
