Initial coding for the add trip pages

--- a/TripsLog/Views/Shared/_Layout.cshtml
+++ b/TripsLog/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
         </header>
     </div>
     <div class="container">
+        @RenderSection("SubHead", required: false)
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
