--- a/TripsLog/Views/Trip/Page1.cshtml
+++ b/TripsLog/Views/Trip/Page1.cshtml
@@ -7,7 +7,7 @@
     <h2>Add Trip Destination and Dates</h2>
 }
 
-<form asp-action="Add" method="post">
+<form asp-action="AddPage1" method="post">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="Destination">Destination</label>
@@ -18,21 +18,21 @@
         <input asp-for="Accommodation" class="form-control" />
     </div>
     <div class="form-group">
-        <label asp-for="StartDate.Date">Start Date</label>
-        <input asp-for="StartDate.Date" class="form-control" />
+        <label asp-for="StartDate">Start Date</label>
+        <input type="date" asp-for="StartDate" class="form-control" />
     </div>
     <div class="form-group">
-        <label asp-for="EndDate.Date">End Date</label>
-        <input asp-for="EndDate.Date" class="form-control" />
+        <label asp-for="EndDate">End Date</label>
+        <input type="date"  asp-for="EndDate" class="form-control" />
     </div>
-    @if (ViewBag.Accommodation != "")
-    {
-        <a class="btn btn-primary" asp-action="Add" asp-route-page="2">Next</a>
-    }
+    <input type="hidden" asp-for="TripId" />
+    @*@if (ViewBag.Accommodation != "")
+    {*@
+        <button type="submit" class="btn btn-primary">Next</button>
+    @*}
     else
     {
-        <a class="btn btn-primary" asp-action="Add" asp-route-page="3">Next</a>
-    }
+        <button type="submit" class="btn btn-primary">Next</button>
+    }*@
     <a asp-action="Cancel" class="btn btn-primary">Cancel</a>
-    <input type="hidden" asp-for="TripId" />
 </form>
