--- a/TripsLog/Views/Trip/Page3.cshtml
+++ b/TripsLog/Views/Trip/Page3.cshtml
@@ -1,9 +1,8 @@
 ﻿@model Trip
 @{ 
     ViewData["Title"] = "Add Trip - Page 3";
-    // string userMessage = TempData?.Peek("Destination")?.ToString() ?? "";
 }
-@if (TempData.Peek("Destination").ToString() != "") // (userMessage != "")
+@if (TempData.Peek("Destination") != null)
 {
     @section SubHead
     {
@@ -11,10 +10,14 @@
     }
 }
 
-<form asp-action="Add" method="post">
+<form asp-action="AddPage3" method="post">
     <div class="form-group">
         <input asp-for="ThingToDo1" />
+    </div>
+    <div class="form-group">
         <input asp-for="ThingToDo2" />
+    </div>
+    <div class="form-group">
         <input asp-for="ThingToDo3" />
     </div>
     <button class="btn btn-primary" type="submit">Save</button>
