--- a/TripsLog/Views/Trip/Page1.cshtml
+++ b/TripsLog/Views/Trip/Page1.cshtml
@@ -19,11 +19,11 @@
     </div>
     <div class="form-group">
         <label asp-for="StartDate">Start Date</label>
-        <input type="date" asp-for="StartDate" class="form-control" />
+        <input type="date" asp-for="StartDate" value="@DateTime.Today" class="form-control" />
     </div>
     <div class="form-group">
         <label asp-for="EndDate">End Date</label>
-        <input type="date"  asp-for="EndDate" class="form-control" />
+        <input type="date" asp-for="EndDate" value="@DateTime.Today" class="form-control" />
     </div>
     <input type="hidden" asp-for="TripId" />
     @*@if (ViewBag.Accommodation != "")
