Everything except the displayed url for page3 when routed to from page1 is working correctly

--- a/TripsLog/Views/Trip/Page2.cshtml
+++ b/TripsLog/Views/Trip/Page2.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Trip
 @{ 
     ViewData["Title"] = "Add Trip - Page 2";
+    TempData["CurrentPage"] = 2;
 }
 @if (TempData.Peek("Accommodation") != null)
 {
@@ -10,7 +11,7 @@
     }
 }
 
-<form asp-action="AddPage2" method="post">
+<form asp-action="Add" method="post">
     <div class="form-group">
         <label asp-for="AccommodationPhone">Phone Number</label>
         <input asp-for="AccommodationPhone" class="form-control" />
@@ -19,6 +20,6 @@
         <label asp-for="AccommodationEmail">Email Address</label>
         <input asp-for="AccommodationEmail" class="form-control" />
     </div>
-    <button type="submit" class="btn btn-primary">Next</button>
+    <button type="submit" class="btn btn-primary" asp-action="Add" asp-route-id="3">Next</button>
     <a asp-action="Cancel" class="btn btn-primary">Cancel</a>
 </form>
