--- a/TripsLog/Views/Trip/Page1.cshtml
+++ b/TripsLog/Views/Trip/Page1.cshtml
@@ -1,13 +1,14 @@
 ﻿@model Trip
 @{
     ViewData["Title"] = "Add Trip - Page 1";
+    TempData["CurrentPage"] = 1;
 }
 @section SubHead
 {
     <h2>Add Trip Destination and Dates</h2>
 }
 
-<form asp-action="AddPage1" method="post">
+<form asp-action="Add" method="post">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="Destination">Destination</label>
@@ -26,13 +27,14 @@
         <input type="date" asp-for="EndDate" value="@DateTime.Today" class="form-control" />
     </div>
     <input type="hidden" asp-for="TripId" />
-    @*@if (ViewBag.Accommodation != "")
+    @*<input type="hidden" @TempData["CurrentPage"]="1" />*@
+    @*@if (ViewData["Accommodation"] != null)
     {*@
-        <button type="submit" class="btn btn-primary">Next</button>
+        <button type="submit" class="btn btn-primary" asp-action="Add" asp-route-id="2">Next</button>
     @*}
     else
     {
-        <button type="submit" class="btn btn-primary">Next</button>
+        <button type="submit" class="btn btn-primary" asp-action="Add" asp-route-id="3">Next</button>
     }*@
     <a asp-action="Cancel" class="btn btn-primary">Cancel</a>
 </form>
